# hw2

./: .gitignore  CMakeLists.txt  Makefile  amazon.cpp  book.cpp  book.h  clothing.cpp  clothing.h  db_parser.cpp  db_parser.h  main.cpp  movie.cpp  movie.h  mydatastore.cpp  mydatastore.h  out.out  product.cpp  product_parser.cpp  user.cpp  util.cpp  util.h
hw2_tests/amazon_tests/testFiles/AddInvalidHitToCart/: output.txt
hw2_tests/amazon_tests/testFiles/AddItemToMultipleUsers/: output.txt
hw2_tests/amazon_tests/testFiles/AddOneToCart/: output.txt
hw2_tests/amazon_tests/testFiles/AddSameProductTwoUsersCarts/: output.txt
hw2_tests/amazon_tests/testFiles/AddToTwoUsersCarts/: output.txt
hw2_tests/amazon_tests/testFiles/AddTwoIdenticalItems/: output.txt
hw2_tests/amazon_tests/testFiles/AddTwoItems/: output.txt
hw2_tests/amazon_tests/testFiles/AddTwoProductsTwoUsers/: output.txt
hw2_tests/amazon_tests/testFiles/AndMultipleHit/: output.txt
hw2_tests/amazon_tests/testFiles/AndSearch10000Products/: output.txt
hw2_tests/amazon_tests/testFiles/Book/: output.txt
hw2_tests/amazon_tests/testFiles/Buy10000Products/: output.txt
hw2_tests/amazon_tests/testFiles/BuyCart/: output.txt
hw2_tests/amazon_tests/testFiles/BuyCartInsufficientFunds/: output.txt
hw2_tests/amazon_tests/testFiles/BuyCartTwoItems/: output.txt
hw2_tests/amazon_tests/testFiles/BuyCartUnknownUser/: output.txt
hw2_tests/amazon_tests/testFiles/BuySingleStockItemMultipleUsers/: output.txt
hw2_tests/amazon_tests/testFiles/BuyTwoProductsTwoUsers/: output.txt
(+16 files in other folders)
